--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 future
 pycountry
-pandas 
-numpy 
-matplotlib.pyplot 
-seaborn 
+pandas
+numpy
+matplotlib
+seaborn
 ipywidgets
-plotly.express 
+plotly-express
 folium
 Basemap
 sklearn
-from sklearn.preprocessing import minmax_scale
-from IPython.html import widgets
-from IPython.display import display
+scikit-mlm
+ipywidgets
+ipython
